# betting_app

./: README.md
.github/workflows/: ci.yml
app/: .gitignore  config.xml  package-lock.json
app/www/: README.md
front/: index.css  index.html  package-lock.json  package.json  vite.config.js
front/wasm-module/: .gitignore  Cargo.toml  README.md
front/wasm-module/src/: lib.rs  peerjs.rs
front/wasm-module/src/components/: add_by_peer_id_icon.rs  arbitrate_icon.rs  copy_peer_id_icon.rs  make_bet_icon.rs  mod.rs  open_contacts_icon.rs  open_menu_icon.rs  peer_id_display.rs
