[package]
name = "wasm-module"
version = "0.1.0"
authors = ["Dmitrii Demenev <demenev.dmitriy1@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
wasm-bindgen-futures = "0.4.37"
async-std = "1.12.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
statue = "0.3.0"
wasm_extra = "0.1.6"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "Document",
    "Window",
    "HtmlInputElement",
    "Navigator",
    "HtmlDialogElement",
]

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
